Refine description box styling for better readability
- Update background style:
  - Replace gradient background with semi-transparent white.
  - Enhance readability and blend with other elements.

- Adjust text styling:
  - Change text color from white to #333 for better contrast.
  - Retain font family as Arial for consistency.

- Modify border and shadow:
  - Use a lighter border with rgba(0, 0, 0, 0.1).
  - Maintain the shadow effect for depth.

- Ensure layout consistency:
  - Keep width and padding intact for a clean design.
  - Preserve rounded corners for a modern look.

--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
             /* Adjust spacing as needed */
         }
 
+
         /* Container for the description box */
         .description-container {
             flex: 1;
@@ -327,15 +328,16 @@
 
         /* Description Box */
         .description-box {
-            background: linear-gradient(135deg, #6a11cb, #2575fc);
-            /* Fashionable gradient */
-            border: 1px solid #ccc;
+            background: rgba(255, 255, 255, 0.8);
+            /* Semi-transparent background */
+            border: 1px solid rgba(0, 0, 0, 0.1);
+            /* Light border */
             padding: 15px;
             border-radius: 10px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
             width: 300px;
             /* Adjust width as needed */
-            color: white;
+            color: #333;
             /* Text color */
             font-family: Arial, sans-serif;
         }
