--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            /* Remove default margin */
             padding: 0;
-            /* Remove default padding */
             position: relative;
         }
 
@@ -28,7 +26,6 @@
             width: 100%;
             height: 100%;
             z-index: -1;
-            /* Place it behind the content */
             overflow: hidden;
         }
 
@@ -41,9 +38,7 @@
             transform: translate(-50%, -50%);
             object-fit: cover;
             pointer-events: none;
-            /* Hide YouTube overlays */
             filter: brightness(0.8);
-            /* Optional: Adjust brightness to blend with the background */
         }
 
         /* Overlay to adjust transparency */
@@ -55,7 +50,6 @@
             width: 100%;
             height: 100%;
             background-color: rgba(0, 0, 0, 0.2);
-            /* Adjust transparency (0.5 = 50% opacity) */
         }
 
         /* Hide YouTube logo and other elements */
@@ -77,38 +71,29 @@
             left: 0;
             width: 100%;
             height: calc(100% - 100px);
-            /* Adjust height to exclude the footer */
             z-index: 0;
-            /* Place it above the video but below the content */
         }
 
         /* Content styling */
         .content {
             position: relative;
             z-index: 1;
-            /* Place content above the video and click blocker */
             background-color: rgba(255, 255, 255, 0.9);
-            /* Slightly transparent background for readability */
             padding: 20px;
             border-radius: 10px;
             max-width: 1200px;
-            /* Wider for larger screens */
             width: 90%;
-            /* Responsive width */
             margin: 50px auto;
-            /* Center the content */
         }
 
         /* Ensure the video doesn't autoplay on mobile devices */
         @media (max-width: 768px) {
             .video-background {
                 display: none;
-                /* Hide video on small screens */
             }
 
             .content {
                 background-color: #fff;
-                /* Solid background for mobile */
             }
         }
 
@@ -151,7 +136,6 @@
         .section h2 {
             text-align: center;
             font-size: 2rem;
-            /* Responsive font size */
             color: #333;
             margin-bottom: 20px;
         }
@@ -160,7 +144,6 @@
         .grid-container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            /* Auto-adjust columns */
             gap: 20px;
         }
 
@@ -170,11 +153,8 @@
 
         .grid-item img {
             width: 100%;
-            /* Make images responsive */
             height: 300px;
-            /* Set a fixed height for all images */
             object-fit: cover;
-            /* Ensure the image covers the entire area without distortion */
             border: 1px solid #ccc;
             border-radius: 8px;
             cursor: pointer;
@@ -191,7 +171,6 @@
             position: relative;
             width: 100%;
             padding-bottom: 60%;
-            /* Aspect ratio for iframe */
             overflow: hidden;
             border: 1px solid #ccc;
             border-radius: 8px;
@@ -320,10 +299,16 @@
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
             color: white;
             font-family: Arial, sans-serif;
-            white-space: pre-wrap;
-            /* Allow text to wrap naturally */
+            width: 100%;
+            /* Responsive width */
+            max-width: 400px;
+            /* Fixed maximum width */
             overflow: hidden;
             /* Hide overflow during animation */
+            white-space: pre-wrap;
+            /* Allow text to wrap naturally */
+            line-height: 1.5;
+            /* Ensure proper line spacing */
         }
 
         /* Typing Animation */
@@ -349,12 +334,7 @@
             }
         }
 
-        /* Container for each line of text */
-        .description-box p {
-            margin: 0;
-            line-height: 1.5;
-        }
-
+        /* Container for the typing line */
         .typing-line {
             display: inline-block;
             overflow: hidden;
