Refine spacing for description container alignment
- Replace `margin-left` with `padding-left` in `.description-container` for better spacing.
- Add comments to clarify the spacing adjustment between the heading and the description box.
- Ensure layout maintains responsiveness and alignment consistency.

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         .description-container {
             flex: 1;
             margin-left: auto; /* Push to the right */
-            margin-left: 20px;
+            padding-left: 20px; /* Add some spacing between the heading and the box */
         }
 
         /* Description Box */
@@ -294,7 +294,7 @@
             justify-content: flex-start; /* Align text to the left */
             position: relative; /* Required for cursor positioning */
         }
-        
+
         /* Typing Line */
         .typing-line {
             display: inline-block;
