--- a/index.html
+++ b/index.html
@@ -436,13 +436,17 @@
             <a href="#analysis-section">視覺化分析</a>
         </div>
         <!-- Shot Operating Distribution Section -->
+        <!-- Shot Operating Distribution Section -->
         <div class="section" id="shot-operating-distribution">
             <h2>供 Shot 時間分佈</h2>
             <p style="text-align: center; font-size: 0.9em; color: #666; margin-top: 10px;">
                 以下是各小時提供 Shot 的酒吧分佈，按貝氏平均評分排序。
             </p>
+
+            <!-- First Block: 13:00 ~ 17:00 -->
             <div class="table-container">
-                <table id="shot-distribution-table">
+                <h3>13:00 ~ 17:00</h3>
+                <table id="shot-distribution-table-1">
                     <thead>
                         <tr>
                             <th>13:00</th>
@@ -450,6 +454,20 @@
                             <th>15:00</th>
                             <th>16:00</th>
                             <th>17:00</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Rows will be populated by JavaScript -->
+                    </tbody>
+                </table>
+            </div>
+
+            <!-- Second Block: 18:00 ~ 22:00 -->
+            <div class="table-container">
+                <h3>18:00 ~ 22:00</h3>
+                <table id="shot-distribution-table-2">
+                    <thead>
+                        <tr>
                             <th>18:00</th>
                             <th>19:00</th>
                             <th>20:00</th>
