adjust position of wording in typing-line

--- a/index.html
+++ b/index.html
@@ -432,8 +432,7 @@
             <h1>歡迎來到考特打造的條通祭分析</h1>
             <div class="description-container">
                 <div class="description-box">
-                    <p class="typing-line">2025 條通祭，由在地青年發起，與商圈內 40 家酒吧和 3
-                        家餐廳合作，透過「微醺散步」和「沈浸條通」文化導覽等系列活動，讓參與者在享受美酒的同時，深入了解條通商圈的歷史與文化。
+                    <p class="typing-line">2025 條通祭，由在地青年發起，與商圈內 40 家酒吧和 3 家餐廳合作，透過「微醺散步」和「沈浸條通」文化導覽等系列活動，讓參與者在享受美酒的同時，深入了解條通商圈的歷史與文化。
                     </p>
                 </div>
             </div>
