--- a/index.html
+++ b/index.html
@@ -457,11 +457,11 @@
                 <table id="shot-distribution-table-1">
                     <thead>
                         <tr>
-                            <th>13:00</th>
-                            <th>14:00</th>
-                            <th>15:00</th>
-                            <th>16:00</th>
-                            <th>17:00</th>
+                            <th colspan="3">13:00</th>
+                            <th colspan="3">14:00</th>
+                            <th colspan="3">15:00</th>
+                            <th colspan="3">16:00</th>
+                            <th colspan="3">17:00</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -476,11 +476,11 @@
                 <table id="shot-distribution-table-2">
                     <thead>
                         <tr>
-                            <th>18:00</th>
-                            <th>19:00</th>
-                            <th>20:00</th>
-                            <th>21:00</th>
-                            <th>22:00</th>
+                            <th colspan="3">18:00</th>
+                            <th colspan="3">19:00</th>
+                            <th colspan="3">20:00</th>
+                            <th colspan="3">21:00</th>
+                            <th colspan="3">22:00</th>
                         </tr>
                     </thead>
                     <tbody>
